--- a/plugins/admin/client/index.html
+++ b/plugins/admin/client/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="IE=9" />
     <meta http-equiv="x-ua-compatible" content="chrome=1" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
     <link href="//fonts.googleapis.com/css?family=Anton" rel="stylesheet" />
+    <link href="/admin/assets/css/bundle.min.css" rel="stylesheet" />
     <title>Platform | Abibao</title>
   </head>
   <body>
