admin login / logout and menus

--- a/plugins/admin/client/index.html
+++ b/plugins/admin/client/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="IE=9" />
     <meta http-equiv="x-ua-compatible" content="chrome=1" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
-    <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-    <link href="//fonts.googleapis.com/css?family=Anton" rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css?family=Lato:200,300,400,800" rel="stylesheet">
     <link href="/admin/assets/css/bundle.min.css" rel="stylesheet" />
     <title>Platform | Abibao</title>
   </head>
