--- a/plugins/admin/client/index.html
+++ b/plugins/admin/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="IE=9" />
     <meta http-equiv="x-ua-compatible" content="chrome=1" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="//fonts.googleapis.com/css?family=Lato:200,300,400,800" rel="stylesheet">
     <link href="/admin/assets/css/bundle.min.css" rel="stylesheet" />
     <title>Platform | Abibao</title>
