--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -1,10 +1,34 @@
 <html>
   <head>
+    <title>{{ page.metadata.title }}</title>
     <meta charSet="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{page.metadata.title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href="/modules/designmodo-flat-ui/dist/css/vendor/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+    <link href="/modules/designmodo-flat-ui/dist/css/flat-ui.min.css" type="text/css" rel="stylesheet" />
+    <link href="/themes/default/css/main.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <vue-markdown :source="page.content" />
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+          </button>
+          <a class="navbar-brand" href="/"><img height="28" src="/themes/default/images/abibao-logo.png" /></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li v-for="menu in page.menus" :class="(menu.active===true) ? 'active' : ''">
+              <a :href="menu.href" :key="menu.uuid">{{ menu.label }}</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <vue-markdown :source="page.content" />
+    </div>
+    <script src="/modules/designmodo-flat-ui/dist/js/vendor/jquery.min.js"></script>
+    <script src="/modules/designmodo-flat-ui/dist/js/flat-ui.min.js"></script>
   </body>
 </html>
